--- a/config.toml
+++ b/config.toml
@@ -49,44 +49,33 @@ URL = "about"
 weight = 1
 
 [[menu.main]]
-name = "Service"
-URL = "services"
+name = "Projects"
+URL = "projects"
 weight = 2
 
 [[menu.main]]
-name = "Portfolio"
-URL = "portfolio"
+name = "Insights"
+URL = "insights"
 weight = 3
+
+[[menu.main]]
+name = "Experiments"
+URL = "experiments"
+weight = 4
 
 [[menu.main]]
 name = "Team"
 URL = "team"
-weight = 4
-
-[[menu.main]]
-name = "Pricing"
-URL = "pricing"
 weight = 5
-
-[[menu.main]]
-name = "Blog"
-URL = "blog"
-weight = 6
 
 [[menu.main]]
 name = "Contact"
 URL = "contact"
-weight = 7
-
-#### external / static link ####
-[[menu.static]]
-name = "Themefisher"
-URL = "https://themefisher.com/"
-weight = 8
+weight = 6
 
 ############################# Default Parameters ##########################
 [params]
-logo = "images/logo.png"
+logo = "images/logo_es.png"
 # Meta data
 description = "Responsive Multipurpose Parallax HTML5 Template"
 author = "Themefisher"
@@ -98,7 +87,7 @@ post_share = true
 # preloader
 [params.preloader]
 enable = true
-preloader = "images/logo.png"
+preloader = "images/logo_es.png"
 
 # google map
 [params.map]
