--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -4,11 +4,11 @@ team:
   title : Our Team
   team_member :
     # team member loop
-    - name : Abul Mal Muhit
-      image_webp : images/team/team-1.webp
-      image : images/team/team-1.jpg
-      designation : CEO/Founder
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+    - name : Alok Kumar
+      image_webp : images/team/Alok.webp
+      image : images/team/Alok.jpg
+      designation : Director
+      content : Director of engineering and innovation, with extensive experience in driving cutting edge fast paced innovations to help build AI-first organisation. He is a full stack AI practitioner and a certified architect with demonstrated track record of architecting large-scale solutions.
       social :
         - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
           link : "#"
@@ -20,11 +20,27 @@ team:
           link : "#"
         
     # team member loop
-    - name : Frank Miller
-      image_webp : images/team/team-2.webp
-      image : images/team/team-2.jpg
+    - name : Harry Samson
+      image_webp : images/team/Harry.webp
+      image : images/team/Harry.jpg
+      designation : Senior Manager
+      content : Resident tinkerer at Kepler. An expert in physical computing, you can mostly find him in the lab, exploring various technologies. His passion is to enable the creation of experiences which blur the boundaries of physical and digital.
+      social :
+        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
+          link : "#"
+        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
+          link : "#"
+        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
+          link : "#"
+        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
+          link : "#"
+        
+    # team member loop
+    - name : Mayank Jain
+      image_webp : images/team/mayank.webp
+      image : images/team/mayank.jpg
       designation : Manager
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+      content : AI developer in Kepler lab with expertise in and Machine Learning and Computer vision. He likes to spend most of his time working on problems involving how to make computers see and think using techniques like Deep learning, image processing, NLP etc.
       social :
         - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
           link : "#"
@@ -36,27 +52,11 @@ team:
           link : "#"
         
     # team member loop
-    - name : Michael Jonson
-      image_webp : images/team/team-3.webp
-      image : images/team/team-3.jpg
-      designation : Web Developer
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-      social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        
-    # team member loop
-    - name : Mo. Kha. Alamgir
-      image_webp : images/team/team-4.webp
-      image : images/team/team-4.jpg
-      designation : SEO Specialist
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+    - name : Nitin Katyal
+      image_webp : images/team/Nitin.webp
+      image : images/team/Nitin.jpg
+      designation : Senior Associate | Full Stack Developer
+      content : Resident Full Stack Developer at Kepler. Nitin has penchant for Algorithms and Design Patterns, with expertise in creating full stack applications based on Python-Django and NodeJS. He likes to spend time learning about and working on scalable and robust frameworks.
       social :
         - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
           link : "#"
