remove contact form & use kepler DL for contact email id

--- a/data/en/contact.yml
+++ b/data/en/contact.yml
@@ -17,4 +17,4 @@ contact:
     #   info : "Fax: +880-31-000-000"
       
     - icon : ti-email # themify icon pack : https://themify.me/themify-icons
-      info : "Email: keplerwaasi@gmail.com"
+      info : "Email: IndiaStudio-Kepler@publicissapient.com"
