--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -45,11 +45,11 @@ team:
         - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
           link : "#"
         - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+          link : "https://twitter.com/mayank10j"
         - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+          link : "https://www.linkedin.com/in/mayankjain7"
         - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+          link : "https://mayankjain.co.in/"
         
     # team member loop
     - name : Nitin Katyal
